test/libhyperion/syntaxTests/denominations/two_denominations_same_literal.hyp
contract C {
	uint constant y = 8 gplanck znd;
}
// ----
// ParserError 2314: (39-44): Expected ';' but got 'znd'
